# DM2025-Lab2-Exercise

./: DM2025-Lab2-Homework.ipynb  DM2025-Lab2-Master-Phase_1.ipynb  DM2025-Lab2-Master-Phase_2_Bonus.ipynb  DM2025-Lab2-Master-Phase_2_Main.ipynb  DM2025_Lab2_Private_Competition.ipynb  pyproject.toml  spm_bpe.model  spm_bpe.vocab
data/: test_df.pkl  train_df.pkl
logs/: training_log.csv
private_competition/: corpus.txt  freq_patterns_anger_minSup21.txt  freq_patterns_disgust_minSup2.txt  freq_patterns_fear_minSup4.txt  freq_patterns_joy_minSup47.txt  freq_patterns_sadness_minSup7.txt  freq_patterns_surprise_minSup12.txt  hw_td_freq_db_anger.csv  hw_td_freq_db_disgust.csv  hw_td_freq_db_fear.csv  hw_td_freq_db_joy.csv  hw_td_freq_db_sadness.csv  hw_td_freq_db_surprise.csv  stopwords_cleaned.txt
private_competition/del_stopwords/: hw_td_freq_db_anger.csv  hw_td_freq_db_disgust.csv  hw_td_freq_db_fear.csv  hw_td_freq_db_joy.csv  hw_td_freq_db_sadness.csv  hw_td_freq_db_surprise.csv
private_competition/submission/: 20251222.csv  20251222_xgb.csv  20251222_xgb_t320.csv  final_submission.csv
private_competition/use_SentencePiece/: hw_td_freq_db_anger.csv  hw_td_freq_db_disgust.csv  hw_td_freq_db_fear.csv  hw_td_freq_db_joy.csv  hw_td_freq_db_sadness.csv  hw_td_freq_db_surprise.csv
results/info_extractions/: Auteur_Review_Zootopia_2.jsonl  Auteur_Review_Zootopia_2_vis.html  bouns5_lecture_analysis.json  bouns5_lecture_for_langextract.txt  lecture_extraction_example.jsonl  lecture_extraction_example_vis.html  review_extraction_example.jsonl
(+3 files in other folders)
