[project]
name = "dm2025-lab2-exercise"
version = "0.1.0"
description = "NTHU ISA5810 Data Mining - Lab 2"
readme = "README.md"
requires-python = "==3.11.11"
dependencies = [
    "accelerate>=1.12.0",
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.3.5",
    "gensim>=4.4.0",
    "google-genai>=1.53.0",
    "gradio>=6.0.2",
    "hf-xet>=1.2.0",
    "jupyter>=1.1.1",
    "keras>=3.12.0",
    "langchain>=1.1.2",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.1",
    "langchain-google-genai>=3.2.0",
    "langextract>=1.1.1",
    "matplotlib>=3.10.7",
    "nltk>=3.9.2",
    "numpy>=2.3.5",
    "ollama>=0.6.1",
    "pami>=2025.7.3.1",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pymupdf>=1.26.6",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.2",
    "sentencepiece>=0.2.1",
    "tensorflow>=2.20.0",
    "tensorflow-hub>=0.16.1",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.57.3",
    "umap-learn>=0.5.9.post2",
    "xgboost>=3.1.2",
]
[tool.uv.sources]
torch = [
    { index = "pytorch-cu126" },
]
torchvision = [
    { index = "pytorch-cu126" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
